fix: same scrollbar style for the entire document

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -50,17 +50,17 @@ html {
   scroll-behavior: smooth;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 0.75rem;
 
   background-color: var(--bg-medium);
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: transparent;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   border-radius: 5px;
 
   background-color: var(--bg-lighter);
